# popqc

./: .gitignore  .gitmodules  1.qasm  Cargo.toml  README.md  oac_results.csv  qiskit_results.csv  qiskit_results1.csv  run.sh  run_voqc.py  test_mem.sh  test_time.sh  voqc_results.csv
benchmarks/: grover_n11_from_python.qasm  grover_n13_from_python.qasm  grover_n15_from_python.qasm  grover_n9_from_python.qasm  hhl_n7_from_python.qasm  hhl_n9_from_python.qasm  nwq_boolean_satisfaction_n28.qasm  nwq_boolean_satisfaction_n30.qasm  nwq_boolean_satisfaction_n32.qasm  nwq_square_root_n42.qasm  nwq_square_root_n42.qasm.txt  nwq_square_root_n48.qasm  nwq_square_root_n48.qasm.txt  nwq_square_root_n54.qasm.txt  nwq_square_root_n60.qasm.txt  nwq_statevector_n5.qasm  nwq_statevector_n6.qasm  preprocess.ipynb  readme.md  shor_7_mod_15_n10_from_python.qasm  shor_7_mod_15_n12_from_python.qasm  shor_7_mod_15_n14_from_python.qasm  test.qasm  testsoam.qasm  testsoam2.qasm  vqe_n18_from_python.qasm  vqe_n22_from_python.qasm  vqe_n26_from_python.qasm
configs/: n1.toml  test_quartz.toml
figures/: figure.ipynb  test.ipynb
resources/: Clifford_T_4_3_complete_ECC_set.json  Clifford_T_5_3_complete_ECC_set.json  Nam_4_3_complete_ECC_set.json  Nam_6_3_complete_ECC_set.json
resources/roqc/circuit/: Cargo.toml  config.toml
resources/roqc/circuit/src/: config.rs  gate.rs  lib.rs  types.rs
resources/roqc/circuit/src/dag/: circuit_dag.rs  dag_impl.rs  mod.rs
resources/roqc/circuit/src/layer/: circuit_layer.rs  mod.rs
resources/roqc/circuit/src/seq/: mod.rs  qasm_parser.rs  seq_impl.rs
(+549 files in other folders)
