[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
ordered-float = "4.2.0"
toml = "0.8.11"
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.12.1"
rayon = "1.9.0"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
csv = "1.3.0"
msgpack-rpc = "0.4.2"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
order-maintenance = "0.1.1"
petgraph = "0.6.5"
regex = "1.5.4"
meval = "0.2.0"
shellexpand = "3.1.0"